# note-taking-app

./: .gitignore  docker-compose.yaml
.github/workflows/: deployment.yaml
note-taking-api/: .env.example  alembic.ini  main.py  pyproject.toml  test_db.py
note-taking-api/app/: database.py  exception.py
note-taking-api/app/models/: note.py  note_tag.py  tag.py  user.py
note-taking-api/app/repositories/: note_repository.py  tag_repository.py  user_repository.py
note-taking-api/app/routes/: auth_route.py  note_route.py  tag_route.py
note-taking-api/app/schemas/: note_schema.py  user_schema.py
note-taking-api/app/services/: auth_service.py  note_service.py  tag_service.py
note-taking-api/app/utils/: config.py  user_utils.py
note-taking-api/migrations/: README  env.py
note-taking-api/migrations/versions/: 254cdb012017_create_users_table.py  80714fa9109b_update_users_table_and_create_notes_.py  aea239fab6f7_update_notes_table.py  b7bcc1570562_update_users_table_and_create_notes_.py
note-taking-app-ui/: package.json  vite.config.ts
note-taking-app-ui/src/: App.tsx  index.css  main.tsx
note-taking-app-ui/src/components/: Components.tsx  Divider.tsx  InputGroup.tsx  Logo.tsx  MenuBar.tsx
note-taking-ui/: .env.example  index.html  package.json
note-taking-ui/src/: App.tsx  main.tsx
note-taking-ui/src/components/: Components.tsx  EmptyState.tsx  Logo.tsx  MenuBar.tsx  ProtectedRoute.tsx  Toast.tsx
note-taking-ui/src/context/: AuthContext.tsx
note-taking-ui/src/hooks/: useAuthContext.ts  useBreakPoint.ts  useBreakpoint.ts  useGlobalStore.ts
(+93 files in other folders)
